@@ -377,59 +377,6 @@ public class SWPairwiseAlignment {
         return w_open+(k-1)*w_extend; // gap
     }
 
-    private void print(int[][] s) {
-        for ( int i = 0 ; i < s.length ; i++) {
-            for ( int j = 0; j < s[i].length ; j++ ) {
-                System.out.printf(" %4d",s[i][j]);
-            }
-            System.out.println();
-        }
-    }
-
-    private void print(double[][] s) {
-        for ( int i = 0 ; i < s.length ; i++) {
-            for ( int j = 0; j < s[i].length ; j++ ) {
-                System.out.printf(" %4g",s[i][j]);
-            }
-            System.out.println();
-        }
-    }
-
-    private void print(int[][] s, String a, String b) {
-
-        System.out.print("        ");
-        for ( int j = 1 ; j < s[0].length ; j++) System.out.printf(" %4c",b.charAt(j-1)) ;
-        System.out.println();
-
-        for ( int i = 0 ; i < s.length ; i++) {
-            if ( i > 0 ) System.out.print(a.charAt(i-1));
-            else System.out.print(' ');
-            System.out.print("  ");
-            for ( int j = 0; j < s[i].length ; j++ ) {
-                System.out.printf(" %4d",s[i][j]);
-            }
-            System.out.println();
-        }
-    }
-
-
-    private void print(double[][] s, String a, String b) {
-
-        System.out.print("");
-        for ( int j = 1 ; j < s[0].length ; j++) System.out.printf(" %4c",b.charAt(j-1)) ;
-        System.out.println();
-
-        for ( int i = 0 ; i < s.length ; i++) {
-            if ( i > 0 ) System.out.print(a.charAt(i-1));
-            else System.out.print(' ');
-            System.out.print("  ");
-            for ( int j = 0; j < s[i].length ; j++ ) {
-                System.out.printf(" %2.1f",s[i][j]);
-            }
-            System.out.println();
-        }
-    }
-
     private void print(double[] s, byte[] a, byte[] b) {
            int n = a.length+1;
            int m = b.length+1;
@@ -713,11 +660,11 @@ public class SWPairwiseAlignment {
             System.err.println("Only one "+argname+" argument is allowed");
             System.exit(1);
         }
-        if ( l.get(0).equals("true") ) return new Boolean(true);
-        if ( l.get(0).equals("false") ) return new Boolean(false);
+        if ( l.get(0).equals("true") ) return Boolean.valueOf(true);
+        if ( l.get(0).equals("false") ) return Boolean.valueOf(false);
         System.err.println("Can not parse value provided for "+argname+" argument ("+l.get(0)+"); true/false are allowed");
         System.exit(1);
-        return null;
+        return Boolean.valueOf(false); // This value isn't used because it is preceded by System.exit(1)
     }
 
 /* ##############################################
